--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "setuptools.build_meta"
 name = "pyvgx"
 dynamic = ["version"]
 requires-python = ">= 3.12"
-authors = [{ name = "Stian Lysne", email = "x@y.com" }]
+authors = [{ name = "X Y", email = "x@y.com" }]
 description = "PyVGX - Vector Graph Index Python Extensions"
 readme = { file = "README.md", content-type = "text/markdown" }
 
