--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
         "stdlib.h": "c",
         "memory.h": "c",
         "_vxhtml.h": "c"
-    }
+    },
+    "cSpell.configFile": "./.config/cspell.json"
 }
